Add new couvreur algorithm
Adding new couvreur algorithm based on Union-Find

* src/fasttgbaalgos/ec/Makefile.am: add new files
* src/fasttgbaalgos/ec/cou99_uf.cc: new file
* src/fasttgbaalgos/ec/cou99_uf.hh: new file

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -25,11 +25,13 @@ ecdir = $(pkgincludedir)/fasttgbaalgos/ec
 ec_HEADERS = \
   ec.hh \
   cou99.hh \
+  cou99_uf.hh \
   cou99strength.hh \
   union_find.hh
 
 noinst_LTLIBRARIES = libec.la
 libec_la_SOURCES = \
   cou99.cc \
+  cou99_uf.cc \
   cou99strength.cc \
   union_find.cc
