Weak Emptiness check
A counterexample is raised as soon a an accepting transition
is reached if the destination of this transition is on
the todo stack

* src/tgbaalgos/weakemptchk.cc: New file
* src/tgbaalgos/weakemptchk.hh: New file
* src/tgbaalgos/Makefile.am: Add it.

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -72,6 +72,7 @@ tgbaalgos_HEADERS = \
   termemptchk.hh \
   translate.hh \
   reductgba_sim.hh \
+  weakemptchk.hh \
   weight.hh
 
 noinst_LTLIBRARIES = libtgbaalgos.la
@@ -119,6 +120,7 @@ libtgbaalgos_la_SOURCES = \
   termemptchk.cc \
   translate.cc \
   reductgba_sim.cc \
+  weakemptchk.cc \
   weight.cc
 
 libtgbaalgos_la_LIBADD = gtec/libgtec.la
