--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -71,6 +71,7 @@ tgbaalgos_HEADERS = \
   termemptchk.hh \
   translate.hh \
   reductgba_sim.hh \
+  weakemptchk.hh \
   weight.hh
 
 noinst_LTLIBRARIES = libtgbaalgos.la
@@ -118,6 +119,7 @@ libtgbaalgos_la_SOURCES = \
   termemptchk.cc \
   translate.cc \
   reductgba_sim.cc \
+  weakemptchk.cc \
   weight.cc
 
 libtgbaalgos_la_LIBADD = gtec/libgtec.la
