Ell emptiness check algorithm
This algorihtm provide a dynamic emptines check.
To be efficient we suppose that the automaton
over which the emptiness check is done as be accpostproc

* src/tgbaalgos/emptiness.cc: Add specific env
* src/tgbaalgos/emptiness.hh: Add specific env
* src/tgbaalgos/ell.cc: New file.
* src/tgbaalgos/ell.hh: New file.
* src/tgbaalgos/Makefile.am: Add it.

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -36,6 +36,7 @@ tgbaalgos_HEADERS = \
   dotty.hh \
   dottydec.hh \
   dupexp.hh \
+  ell.hh \
   eltl2tgba_lacim.hh \
   emptiness.hh \
   emptiness_stats.hh \
@@ -84,6 +85,7 @@ libtgbaalgos_la_SOURCES = \
   dotty.cc \
   dottydec.cc \
   dupexp.cc \
+  ell.cc \
   eltl2tgba_lacim.cc \
   emptiness.cc \
   gv04.cc \
