Add missing file
* src/tgbaalgos/Makefile.am: add missing file

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -66,6 +66,7 @@ tgbaalgos_HEADERS = \
   se05.hh \
   simulation.hh \
   stats.hh \
+  stats_hierarchy.hh \
   stripacc.hh \
   tau03.hh \
   tau03opt.hh \
