Add bench directory used for TACAS 13
This patch provides some examples and some tools
used in the paper

*  README: add new directory
*  configure.ac: add new directory
*  bench/Makefile.am: Ad new directory
*  bench/dynchk/Makefile.am: New Makefile
*  bench/dynchk/.gitignore: ignore some files
*  bench/dynchk/README: New File
*  bench/dynchk/algorithms: New File
*  bench/dynchk/defs.in: New File
*  bench/dynchk/dve_suite.sh: New File for tests
*  bench/dynchk/dynchk.cc: Model checker tool
*  bench/dynchk/gen.cc: Formula generator
*  bench/dynchk/generator.sh: script for automation
*  bench/dynchk/mergedecomp.sh: sumup results
*  bench/dynchk/models/.gitignore: ignore files
*  bench/dynchk/models/bopdp.1.dve: model from beem
*  bench/dynchk/models/bopdp.1.dve.dve_suite: tests
*  bench/dynchk/models/bopdp.3.dve: model from beem
*  bench/dynchk/models/bopdp.3.dve.dve_suite: tests
*  bench/dynchk/models/cl3serv1.pml: model in promela
*  bench/dynchk/models/cl3serv1.test_suite: tests
*  bench/dynchk/models/cl3serv3.pml: model in promela
*  bench/dynchk/models/cl3serv3.test_suite: tests
*  bench/dynchk/models/eeaean1.pml: model in promela
*  bench/dynchk/models/eeaean1.test_suite: test
*  bench/dynchk/models/eeaean2.pml: model in promela
*  bench/dynchk/models/eeaean2.test_suite: tests
*  bench/dynchk/models/elevator.1.dve: model from beem
*  bench/dynchk/models/elevator.1.dve.dve_suite: test
*  bench/dynchk/models/elevator.3.dve: model from beem
*  bench/dynchk/models/elevator.3.dve.dve_suite: tests
*  bench/dynchk/models/elevator2.1.dve: model from beem
*  bench/dynchk/models/elevator2.1.dve.dve_suite: tests
*  bench/dynchk/models/elevator2.3.dve: model from beem
*  bench/dynchk/models/elevator2.3.dve.dve_suite:tests
*  bench/dynchk/models/gear.1.dve: model from beem
*  bench/dynchk/models/gear.1.dve.dve_suite: tests
*  bench/dynchk/models/gear.2.dve: model from beem
*  bench/dynchk/models/gear.2.dve.dve_suite: tests
*  bench/dynchk/models/lifts.1.dve: model from beem

--- a/configure.ac
+++ b/configure.ac
@@ -117,6 +117,8 @@ AC_CONFIG_FILES([
   bench/Makefile
   bench/emptchk/Makefile
   bench/emptchk/defs
+  bench/dynchk/Makefile
+  bench/dynchk/defs
   bench/ltlcounter/Makefile
   bench/ltlclasses/Makefile
   bench/ltl2tgba/Makefile
