Cou + UF + Swarm + Shared
This patch add a new algorithm based on Couvreur
using Swarm techniques and some sharing between threads

* src/fasttgbaalgos/ec/union_find.cc: Optimisations.
* src/fasttgbaalgos/ec/union_find.hh: Optimisations.
* src/fasttgbaalgos/ec/union_find_shared.cc: New Thread Safe UF.
* src/fasttgbaalgos/ec/union_find_shared.hh: New Thread Safe UF.
* src/fasttgbaalgos/ec/cou99_uf_shared.cc: New Algorithm.
* src/fasttgbaalgos/ec/cou99_uf_shared.hh: New Algorithm.
* src/fasttgbaalgos/ec/Makefile.am: Add new Files.
* iface/dve2fasttgba/dve2check.cc: Add option for testing.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -29,7 +29,9 @@ ec_HEADERS = \
   cou99strength.hh \
   cou99strength_uf.hh \
   cou99_uf_swarm.hh \
-  union_find.hh
+  cou99_uf_shared.hh \
+  union_find.hh \
+  union_find_shared.hh
 
 noinst_LTLIBRARIES = libec.la
 libec_la_SOURCES = \
@@ -38,4 +40,6 @@ libec_la_SOURCES = \
   cou99strength.cc \
   cou99strength_uf.cc \
   cou99_uf_swarm.cc \
-  union_find.cc
+  cou99_uf_shared.cc \
+  union_find.cc \
+  union_find_shared.cc
