Extract root stack
* src/fasttgbaalgos/ec/root_stack.hh: Add new File.
* src/fasttgbaalgos/ec/Makefile.am: Add it.
* src/fasttgbaalgos/ec/cou99_uf.hh: Remove old def.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -32,6 +32,7 @@ ec_HEADERS = \
   cou99_uf_shared.hh \
   gv04.hh \
   lazycheck.hh \
+  root_stack.hh \
   stackscheck.hh \
   union_find.hh \
   union_find_shared.hh
