Dijkstra emptiness check
* src/fasttgbaalgos/ec/dijkstracheck.hh: Add new File.
* src/fasttgbaalgos/ec/dijkstracheck.cc: Add new File.
* src/fasttgbaalgos/ec/Makefile.am: Add new Files.
* iface/dve2fasttgba/dve2check.cc: Emptiness check it.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -30,6 +30,7 @@ ec_HEADERS = \
   cou99strength_uf.hh \
   cou99_uf_swarm.hh \
   cou99_uf_shared.hh \
+  dijkstracheck.hh \
   gv04.hh \
   lazycheck.hh \
   root_stack.hh \
@@ -46,6 +47,7 @@ libec_la_SOURCES = \
   cou99strength_uf.cc \
   cou99_uf_swarm.cc \
   cou99_uf_shared.cc \
+  dijkstracheck.cc \
   gv04.cc \
   lazycheck.cc \
   stackscheck.cc \
