Instrument GV04 and Cou99
* src/fasttgbaalgos/ec/Makefile.am: Add new files.
* src/fasttgbaalgos/ec/cou99check.cc: Instrument cou99.
* src/fasttgbaalgos/ec/cou99check.hh: Instrument cou99.
* src/fasttgbaalgos/ec/gv04.cc: Instrument it.
* src/fasttgbaalgos/ec/gv04.hh: Instrument it.
* iface/dve2fasttgba/dve2check.cc: Provides Options.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -25,6 +25,7 @@ ecdir = $(pkgincludedir)/fasttgbaalgos/ec
 ec_HEADERS = \
   ec.hh \
   cou99.hh \
+  cou99check.hh \
   cou99_uf.hh \
   cou99strength.hh \
   cou99strength_uf.hh \
@@ -43,6 +44,7 @@ ec_HEADERS = \
 noinst_LTLIBRARIES = libec.la
 libec_la_SOURCES = \
   cou99.cc \
+  cou99check.cc \
   cou99_uf.cc \
   cou99strength.cc \
   cou99strength_uf.cc \
