Add dijkstra SCC computation.
* src/fasttgbaalgos/ec/Makefile.am: Add new files.
* src/fasttgbaalgos/ec/dijkstra_scc.hh: Add headers
* src/fasttgbaalgos/ec/dijkstra_scc.cc: Add Implementation
* iface/dve2fasttgba/dve2check.cc: Wrapper for call.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -33,6 +33,7 @@ ec_HEADERS = \
   cou99_uf_shared.hh \
   deadstore.hh \
   dijkstracheck.hh \
+  dijkstra_scc.hh \
   gv04.hh \
   lazycheck.hh \
   root_stack.hh \
@@ -51,6 +52,7 @@ libec_la_SOURCES = \
   cou99_uf_swarm.cc \
   cou99_uf_shared.cc \
   dijkstracheck.cc \
+  dijkstra_scc.cc \
   gv04.cc \
   lazycheck.cc \
   stackscheck.cc \
