Add Union/Gabow SCC counting
* src/fasttgbaalgos/ec/Makefile.am: Add new files.
* src/fasttgbaalgos/ec/union_scc.hh: Add headers
* src/fasttgbaalgos/ec/union_scc.cc: Add Implementation
* iface/dve2fasttgba/dve2check.cc: Wrapper for call.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -39,6 +39,7 @@ ec_HEADERS = \
   root_stack.hh \
   stackscheck.hh \
   unioncheck.hh \
+  union_scc.hh \
   union_find.hh \
   union_find_shared.hh
 
@@ -57,5 +58,6 @@ libec_la_SOURCES = \
   lazycheck.cc \
   stackscheck.cc \
   unioncheck.cc \
+  union_scc.cc \
   union_find.cc \
   union_find_shared.cc
