Add new directory
This directory will contain all emptiness check
fully optimised

* configure.ac: Add new directory.
* src/fasttgbaalgos/ec/Makefile.am: Specify subdirs.
* src/fasttgbaalgos/ec/opt/Makefile.am: New File.
* src/fasttgbaalgos/ec/opt/opt_tarjan_scc.cc: Canvas for new Tarjan.
* src/fasttgbaalgos/ec/opt/opt_tarjan_scc.hh: Canvas for new Tarjan implem.
* src/fasttgbaalgos/ec/lowlink_stack.hh: Use new stack.

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -17,6 +17,8 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
+SUBDIRS = opt
+
 AM_CPPFLAGS = -I$(srcdir)/../.. -I.. -I../..
 AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
@@ -37,6 +39,7 @@ ec_HEADERS = \
   dijkstra_scc.hh \
   gv04.hh \
   lazycheck.hh \
+  lowlink_stack.hh \
   root_stack.hh \
   stackscheck.hh \
   stats.hh \
@@ -67,3 +70,6 @@ libec_la_SOURCES = \
   union_scc.cc \
   union_find.cc \
   union_find_shared.cc
+
+
+libec_la_LIBADD = opt/libopt.la
