--- a/src/fasttgbaalgos/ec/opt/Makefile.am
+++ b/src/fasttgbaalgos/ec/opt/Makefile.am
@@ -17,7 +17,7 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-AM_CPPFLAGS = -I$(srcdir)/../../..
+AM_CPPFLAGS = -I$(srcdir)/../../.. -I ..
 AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
 optdir = $(pkgincludedir)/fasttgbaalgos/ec/opt
