Add concurent Union Find
This concurent Union Find is based on the concurent hashtable
used by LTSmin. The directory src/fasttgbaalgos/ec/concur/
contains all these needed C sources files  and a wrapper for
A concurent union find.

* configure.ac: Add new directory.
* iface/dve2fasttgba/dve2check.cc: Fix Imports.
* m4/acx_cache_line.m4: Add cache line.
* src/fasttgbaalgos/ec/Makefile.am: Add new directory
* src/fasttgbaalgos/ec/concur/Makefile.am: New File.
* src/fasttgbaalgos/ec/concur/MurmurHash3.c: New File.
* src/fasttgbaalgos/ec/concur/MurmurHash3.h: New File.
* src/fasttgbaalgos/ec/concur/atomics.h: New File.
* src/fasttgbaalgos/ec/concur/balloc.c: New File.
* src/fasttgbaalgos/ec/concur/balloc.h: New File.
* src/fasttgbaalgos/ec/concur/bitset.c: New File.
* src/fasttgbaalgos/ec/concur/bitset.h: New File.
* src/fasttgbaalgos/ec/concur/chunk_support.c: New File.
* src/fasttgbaalgos/ec/concur/chunk_support.h: New File.
* src/fasttgbaalgos/ec/concur/chunk_table_factory.c: New File.
* src/fasttgbaalgos/ec/concur/context.h: New File.
* src/fasttgbaalgos/ec/concur/dir_ops.h: New File.
* src/fasttgbaalgos/ec/concur/dynamic-array.c: New File.
* src/fasttgbaalgos/ec/concur/dynamic-array.h: New File.
* src/fasttgbaalgos/ec/concur/fast_hash.c: New File.
* src/fasttgbaalgos/ec/concur/fast_hash.h: New File.
* src/fasttgbaalgos/ec/concur/fast_set.c: New File.
* src/fasttgbaalgos/ec/concur/fast_set.h: New File.
* src/fasttgbaalgos/ec/concur/feedback.h: New File.
* src/fasttgbaalgos/ec/concur/git_version.h: New File.
* src/fasttgbaalgos/ec/concur/hashtable.c: New File.
* src/fasttgbaalgos/ec/concur/hashtable.h: New File.
* src/fasttgbaalgos/ec/concur/hre_context.c: New File.
* src/fasttgbaalgos/ec/concur/hre_dir_ops.c: New File.
* src/fasttgbaalgos/ec/concur/hre_feedback.c: New File.
* src/fasttgbaalgos/ec/concur/hre_main.c: New File.
* src/fasttgbaalgos/ec/concur/hre_malloc.c: New File.
* src/fasttgbaalgos/ec/concur/hre_messaging.c: New File.
* src/fasttgbaalgos/ec/concur/hr

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -70,5 +70,5 @@ libec_la_SOURCES = \
   union_find.cc \
   union_find_shared.cc
 
-SUBDIRS = opt
-libec_la_LIBADD = opt/libopt.la
+SUBDIRS = opt concur
+libec_la_LIBADD = opt/libopt.la concur/libconcur.la
