Add Tarjan Shared SCC computation
*  configure.ac: Add new Directory.
*  iface/dve2fasttgba/dve2check.cc: Call wrapper.
*  src/fasttgbaalgos/ec/Makefile.am: Add enw directory.
*  src/fasttgbaalgos/ec/concur/Makefile.am: New file.
*  src/fasttgbaalgos/ec/concur/uf.hh: New File.
*  src/fasttgbaalgos/ec/concur/unionfind.c: Update union.
*  src/fasttgbaalgos/ec/concur/unionfind.h: Upodate union.
*  src/fasttgbaalgos/ec/concurec/Makefile: New File.
*  src/fasttgbaalgos/ec/concurec/dead_share.cc: New File.
*  src/fasttgbaalgos/ec/concurec/dead_share.hh: New File.
*  src/fasttgbaalgos/ec/opt/opt_tarjan_scc.cc: Add swarming option
*  src/fasttgbaalgos/ec/opt/opt_tarjan_scc.hh: Add swarmin option.

--- a/configure.ac
+++ b/configure.ac
@@ -211,6 +211,7 @@ AC_CONFIG_FILES([
   src/fasttgba/Makefile
   src/fasttgbaalgos/ec/opt/Makefile
   src/fasttgbaalgos/ec/concur/Makefile
+  src/fasttgbaalgos/ec/concurec/Makefile
   src/fasttgbaalgos/ec/Makefile
   src/fasttgbaalgos/Makefile
   src/tgbatest/defs
