Externalize concur_ec_stat
* src/fasttgbaalgos/ec/concurec/Makefile.am: Update Makefile.
* src/fasttgbaalgos/ec/concurec/concur_ec_stat.hh: New file.
* src/fasttgbaalgos/ec/concurec/dead_share.hh: Update.

--- a/src/fasttgbaalgos/ec/concurec/Makefile.am
+++ b/src/fasttgbaalgos/ec/concurec/Makefile.am
@@ -23,12 +23,9 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 concurecdir = $(pkgincludedir)/fasttgbaalgos/ec/concurec
 
 concurec_HEADERS = \
-  dead_share.hh
-# \
-#   concurec_dijkstra_scc.hh
+  dead_share.hh \
+  concur_ec_stat.hh
 
 noinst_LTLIBRARIES = libconcurec.la
 libconcurec_la_SOURCES = \
   dead_share.cc
- # \
- #  concurec_dijkstra_scc.cc
