Remove hre_main
* src/fasttgbaalgos/ec/concur/Makefile.am: Update Makefile.
* src/fasttgbaalgos/ec/concur/context.h: Update extern.
* src/fasttgbaalgos/ec/concur/feedback.h: Update extern.
* src/fasttgbaalgos/ec/concur/hre_main.c: Remove File.
* src/fasttgbaalgos/ec/concur/hre_malloc.c: Update.
* src/fasttgbaalgos/ec/concur/user.h Update extern.

--- a/src/fasttgbaalgos/ec/concur/Makefile.am
+++ b/src/fasttgbaalgos/ec/concur/Makefile.am
@@ -67,7 +67,6 @@ libconcur_la_SOURCES = \
    fast_hash.c		 \
    hashtable.c		 \
    hre_context.c	 \
-   hre_main.c		 \
    hre_malloc.c		 \
    hre_runtime.c	 \
    unionfind.c
@@ -83,7 +82,7 @@ libconcur_la_SOURCES = \
 #    hre_utils.c
 #   hre_reduce.c
 #    balloc.c
-
+#    hre_main.c
   # MurmurHash3.c \
   # balloc.c \
   # dynamic-array.c \
