Remove hre_context.
* src/fasttgbaalgos/ec/concur/Makefile.am: Update Makefile.
* src/fasttgbaalgos/ec/concur/hre_context.c: Remove File.

--- a/src/fasttgbaalgos/ec/concur/Makefile.am
+++ b/src/fasttgbaalgos/ec/concur/Makefile.am
@@ -64,7 +64,6 @@ libconcur_la_SOURCES = \
    MurmurHash3.c         \
    fast_hash.c		 \
    hashtable.c		 \
-   hre_context.c	 \
    hre_malloc.c		 \
    hre_runtime.c	 \
    unionfind.c
@@ -82,6 +81,7 @@ libconcur_la_SOURCES = \
 #    balloc.c
 #    hre_main.c
 #    dynamic-array.c
+#    hre_context.c
 
   # MurmurHash3.c \
   # balloc.c \
