--- a/src/fasttgbaalgos/ec/concur/Makefile.am
+++ b/src/fasttgbaalgos/ec/concur/Makefile.am
@@ -17,8 +17,8 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-AM_CPPFLAGS = -I$(srcdir)/../../.. -I .. -I$(top_builddir)/src \
-	 -Wall -Werror -std=gnu99 -lpthread -g -DENABLE_TRACE
+AM_CPPFLAGS = -I$(srcdir)/../../.. -I .. -I$(top_builddir)/src -Wall -Werror \
+	 -std=gnu99
 AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
 concurdir = $(pkgincludedir)/fasttgbaalgos/ec/concur
