Fist commit for fasttgba
This new branch has for goal a faster implementation of TGBA
which is the main component of the SPOT library. The main
idea is to remove the buddy dependance.

* configure.ac: fix new Makefiles
* src/fasttgba/Makefile.am: makefile for new tgba
* src/fasttgba/.gitignore: ignore some files
* src/Makefile.am: add new directories
* src/fasttgba/faststate.hh: a new state representation
* src/fasttgba/fastsucciter.hh: a new iter representation
* src/fasttgba/fasttgba.hh: the new tgba
* src/fasttgbaalgos/.gitignore: ignore some files
* src/fasttgbaalgos/Makefile.am: makefile for all algorithms
* src/fasttgbaalgos/tgba2fasttgba.cc: convert tgba into fasttgba
* src/fasttgbaalgos/tgba2fasttgba.hh: interface for conversion
* src/fasttgbatest/.gitignore: ignore some files
* src/fasttgbatest/Makefile.am: makefile for testing fasttgba
* src/fasttgbatest/defs.in: misc
* src/fasttgbatest/tgba2fasttgba.cc: tester for fasttgba translator

Conflicts:
	src/Makefile.am

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,8 +27,9 @@ AUTOMAKE_OPTIONS = subdir-objects
 # libspot.la needed by the tests)
 SUBDIRS = misc priv ltlenv ltlast ltlvisit ltlparse eltlparse tgba	\
           tgbaalgos tgbaparse ta taalgos kripke saba sabaalgos		\
-          neverparse kripkeparse dstarparse . bin ltltest eltltest	\
-          tgbatest sabatest kripketest sanity
+          neverparse kripkeparse dstarparse fasttgba fasttgbaalgos .    \
+	  bin ltltest eltltest tgbatest sabatest kripketest             \
+	  fasttgbatest sanity
 
 lib_LTLIBRARIES = libspot.la
 libspot_la_SOURCES =
@@ -52,6 +53,8 @@ libspot_la_LIBADD =  \
   tgbaalgos/libtgbaalgos.la \
   tgba/libtgba.la \
   tgbaparse/libtgbaparse.la \
+  fasttgba/libfasttgba.la \
+  fasttgbaalgos/libfasttgbaalgos.la \
   ../lib/libgnu.la
 
 # Dummy C++ source to cause C++ linking.
